--- a/deploy/controller-registration.yaml
+++ b/deploy/controller-registration.yaml
@@ -9,11 +9,11 @@ providerConfig:
   values:
     image:
       repository: ghcr.io/stackitcloud/gardener-extension-acl-controller
-      tag: v0.3.1-3-gc53ebe6d
+      tag: v0.3.1-4-g17c87b76
     webhook:
       image:
         repository: ghcr.io/stackitcloud/gardener-extension-acl-webhook
-        tag: v0.3.1-3-gc53ebe6d
+        tag: v0.3.1-4-g17c87b76
     additionalAllowedCidrs: []
 ---
 apiVersion: core.gardener.cloud/v1beta1
